--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url('/img/Trailblaze_Mission_The_Voyage_Continues_2.png');
+    background-image: url('/img/jpg/Trailblaze_Mission_The_Voyage_Continues_2.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
