--- a/css/style.css
+++ b/css/style.css
@@ -143,6 +143,10 @@ th, td {
         font-size: 30px;
     }
 
+    h3 {
+        font-size: 30px;
+    }
+
     ol {
         font-size: 20px;
     }
